doc/CloudNative/week12/istio-specs-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: https-service0
  namespace: tracing
spec:
  gateways:
    - https-service0
  hosts:
    - 'isto.dhb.com'
  http:
    - match:
        - uri:
            exact: /service0
      route:
        - destination:
            host: service0
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: https-service0
  namespace: tracing
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'isto.dhb.com'
      port:
        name: https-service0
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istioexam-credential
